--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,11 @@
   <!--Custom JavaScript -->
   <script src="assets/js/custom.js"></script>
 
+  <!-- Google!! -->
+  <script src="https://apis.google.com/js/platform.js"></script>
+  <meta name="google-signin-client_id"
+    content="957416730242-b6kb9ukuv3t82goniulvd9lkdlkb88dp.apps.googleusercontent.com">
+
 </body>
 
 </html>
